# sv2-getting-started-autopilot

./: .gitignore  Caddyfile  Cargo.toml  update_and_build.sh
src/: main.rs
src/templates/: index.html
template-provider/: entrypoint.sh
web/: index.html
