[package]
name = "sv2-getting-started-autopilot"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
futures-util = "0.3.31"
notify = "8.1.0"
tokio = { version = "1.46.1", features = ["fs", "io-util", "process", "rt-multi-thread", "signal"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
